# ternary-zero

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_GOVERNANCE.md  BENCHMARKS.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  EXECUTION_PLAN.md  HARDWARE_CONSTRAINTS.md  LICENSE  METHODOLOGY.md  README.md  ROADMAP.md  build.rs  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml
.kilo/plans/: 1778091528759-proud-moon.md
benches/: gemv_bench.rs
benchmarks/: GEMV_BENCHMARK_REPORT.md  __init__.py  baseline_comparison.cu  comparison_table.md  fp16_baseline.py  gemv_benchmark.cu  impl_cupy.py  impl_numpy.py  impl_pure_python.py  impl_pytorch.py  impl_ternary_zero.py  llama_transformer_benchmark.py  ncu_analysis.py  power_monitor.py  results.json  run_benchmarks.py  shape_matrix_benchmark.py  undeniable_benchmark.py  undeniable_results.json
benchmarks/output/: BENCHMARK_SUMMARY.md  gemv_benchmark.exp  gemv_benchmark.lib  gemv_profile.nsys-rep  gemv_profile.sqlite  manifest.json  query_db.py  transformer_bench_llama_3.2_3b.json  transformer_bench_llama_3_2_3b.json
examples/: 01_mnist_classifier.py  02_transformer_deploy.py  demo.py  demo_quantize_transformer.py
kernel/: l2_persist.cu  ptx_utils.h  ternary_zero.cu  ternary_zero.h
kernel/nvt/: ternary_zero_nvtx.h
scripts/: capture_env.py  run_gemv_benchmark.ps1
src/: bitlinear.rs  error.rs  ffi.rs  lib.rs  ste.rs
ternary_zero/: __init__.py  _backend.py  _config.py  optim.py  perf.py  quantize.py  tensor.py
ternary_zero/autograd/: __init__.py  engine.py  function.py  functions.py
ternary_zero/data/: __init__.py  dataloader.py  dataset.py
ternary_zero/distributed/: __init__.py  trainer.py
ternary_zero/inference/: __init__.py  cache.py  config.py  engine.py  layers.py  model.py  model_patcher.py  quantize.py  run.py  sampler.py  streaming_engine.py  tokenizer.py
ternary_zero/nn/: __init__.py  activation.py  container.py  convolution.py  dropout.py  embedding.py  functional.py  linear.py  loss.py  module.py  normalization.py  pooling.py
ternary_zero/utils/: __init__.py  binary.py
tests/: test_inference.py  test_perf_models.py  test_ternary_zero.py
