[package]
name = "ternary-zero-core"
version = "0.1.0"
edition = "2021"
description = "High-performance W2A16 GEMV kernel with ternary {-1,0,1} weights for RTX 4060"

[dependencies]
half = "2"

[build-dependencies]
cc = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gemv_bench"
harness = false
