[package]
name = "ternary-zero-core"
version = "0.1.0"
edition = "2021"
description = "High-performance W2A16 GEMV kernel with ternary {-1,0,1} weights — Python/Rust hybrid"
license = "MIT OR Apache-2.0"
keywords = ["cuda", "gpu", "ternary", "quantization", "gemv", "pytorch"]
categories = ["science", "hardware-support"]

[lib]
name = "ternary_zero"
crate-type = ["cdylib", "rlib"]

[dependencies]
half = "2"
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
ndarray = "0.16"

[build-dependencies]
cc = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
cpu-only = []

[[bench]]
name = "gemv_bench"
harness = false