[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "ternary-zero"
version = "0.1.0"
description = "High-performance ternary-weight neural network library with GPU-accelerated PyTorch-compatible API"
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.9"
keywords = ["deep-learning", "quantization", "ternary", "cuda", "gpu", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "torch>=2.0",
]
cpu = [
    "numpy>=1.21",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "ternary_zero"
module-name = "ternary_zero._core"

[tool.pytest.ini_options]
testpaths = ["tests"]
