[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "ternary-zero"
version = "0.1.0"
description = "Ternary-weight neural network library with PyTorch-compatible API"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.9"
keywords = ["deep-learning", "quantization", "ternary", "cuda", "gpu", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
]
inference = [
    "safetensors>=0.4",
    "tokenizers>=0.15",
    "transformers>=4.35",
]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "torch>=2.0",
]
cpu = [
    "numpy>=1.21",
]

[project.scripts]
ternary-zero = "ternary_zero.inference.run:main"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ternary_zero._core"

[tool.pytest.ini_options]
testpaths = ["tests"]